# site-audit-tool

./: .gitignore  README.md  SELF_AUDIT.md  pyproject.toml
audit/: 01_discovery.py  02_performance.py  03_seo.py  04_accessibility.py  05_security.py  06_compliance.py  07_load.py  08_geo.py  config.py  report.py
web/: app.py  runner.py
web/static/: report.css  style.css
web/templates/: audit.html  index.html  report.html
